# esp-pd-heater

./: .gitignore  README.md  README.zh-CN.md  sdkconfig.defaults
.github/workflows/: ci.yml  release.yml
main/: CMakeLists.txt  app_main.c  idf_component.yml
main/core/controller/: app_controller.c  app_controller.h
main/core/events/: app_events.c  app_events.h
main/core/state/: app_lcd_variant.c  app_lcd_variant.h  app_state.c  app_state.h
main/services/: app_services.h
main/services/backlight/: backlight_service.c
main/services/buzzer/: app_buzzer.c  app_buzzer.h
main/services/chip_temp/: chip_temp_service.c
main/services/heater_pwm/: heater_pwm_service.c
main/services/motion/: lis2dh12_service.c
main/services/power_meter/: ina226_service.c
main/services/reflow/: reflow_service.c  reflow_service.h
main/services/temp_control/: pt1000_pid_service.c
main/services/usb_pd/: app_usb_pd.c  app_usb_pd.h  usb_pd_service.c
main/ui/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
main/ui/components/: ui_comp_hook.c
main/ui/fonts/: ui_font_DivenireExtraBold.c  ui_font_Exo2ExtraBold.c  ui_font_NovaMono.c  ui_font_NovaMono13.c  ui_font_NovaMono22.c  ui_font_SmileySans15.c  ui_font_UbuntuMono24.c  ui_font_UbuntuMono60.c  ui_font_silver12.c  ui_font_silver20.c
main/ui/screens/: ui_Screen1.c  ui_Screen1.h
main/ui_app/: app_ui.c  app_ui.h  ui_data_record.c  ui_render.c
main/utils/: app_fmt.c  app_fmt.h  app_power_limit.c  app_power_limit.h  app_pt1000.c  app_pt1000.h  app_strbuf.c  app_strbuf.h
(+16 files in other folders)
